--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-﻿baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = 'aafu'
+baseURL = "https://Johanxd43.github.io/johan/"
+languageCode = "en-us"
+title = "Johan Hernandez's Developer Portfolio"
+theme = "aafu"
