--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/aafu"]
 	path = themes/aafu
-	url = https://github.com/darshanbaral/aafu.git
+	url = https://github.com/Johanxd43/aafu.git
