--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
-baseURL = "https://Johanxd43.github.io/johan/"
+baseURL = "https://johanxd43.github.io/johan/"
 languageCode = "en-us"
 title = "Johan Hernandez's Developer Portfolio"
 theme = "aafu"
+publishDir = "public"
 
 [params]
   author = "Johan Hernandez"
