--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -15,6 +15,16 @@ jobs:
           submodules: true
           fetch-depth: 0
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: |
+          npm install postcss-cli autoprefixer
+          npm install
+
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
